--- a/TALLER_DE_JUSN38/index.html
+++ b/TALLER_DE_JUSN38/index.html
@@ -72,15 +72,15 @@
         <!-- Contenedor de Botones -->
         <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             
-            <!-- Botón 1: Herramientas de Sprites -->
+            <!-- Botón 1: Caja de Herramientas -->
             <a href="generador_sprites.html" class="glass-card rounded-lg p-6 block text-center">
                 <div class="flex justify-center mb-4">
                     <svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.898 20.553L16.5 21.75l-.398-1.197a3.375 3.375 0 00-2.456-2.456L12.75 18l1.197-.398a3.375 3.375 0 002.456-2.456L16.5 14.25l.398 1.197a3.375 3.375 0 002.456 2.456L20.25 18l-1.197.398a3.375 3.375 0 00-2.456 2.456z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M11.42 15.17L17.25 21A2.652 2.652 0 0021 17.25l-5.877-5.877M11.42 15.17l2.472-2.472a3.375 3.375 0 000-4.773L11.42 5.42a3.375 3.375 0 00-4.773 0L2.25 9.828a3.375 3.375 0 000 4.773l2.472 2.472M11.42 15.17L5.877 21" />
                     </svg>
                 </div>
-                <h2 class="text-2xl font-bold text-white">Herramientas de Sprites</h2>
-                <p class="text-slate-400 mt-1">Generador de hojas de sprites y utilidades.</p>
+                <h2 class="text-2xl font-bold text-white">Caja de Herramientas</h2>
+                <p class="text-slate-400 mt-1">Generadores, calculadoras y otras utilidades.</p>
             </a>
 
             <!-- Botón 2: Juegos en Desarrollo -->
