--- a/TALLER_DE_JUSN38/index.html
+++ b/TALLER_DE_JUSN38/index.html
@@ -73,7 +73,7 @@
         <main class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             
             <!-- Botón 1: Caja de Herramientas -->
-            <a href="generador_sprites.html" class="glass-card rounded-lg p-6 block text-center">
+            <a href="caja_de_herramientas.html" class="glass-card rounded-lg p-6 block text-center">
                 <div class="flex justify-center mb-4">
                     <svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M11.42 15.17L17.25 21A2.652 2.652 0 0021 17.25l-5.877-5.877M11.42 15.17l2.472-2.472a3.375 3.375 0 000-4.773L11.42 5.42a3.375 3.375 0 00-4.773 0L2.25 9.828a3.375 3.375 0 000 4.773l2.472 2.472M11.42 15.17L5.877 21" />
