--- a/index.html
+++ b/index.html
@@ -89,33 +89,35 @@
                 <p class="text-slate-400 mt-1">Herramienta para desarrolladores.</p>
             </a>
             
-            <!-- Botón 4: Runa Coffee -->
+            <!-- NUEVO BOTÓN: Fórmula 1 -->
+            <a href="formula_1.html" class="glass-card rounded-lg p-6 block text-center ad-link">
+                <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3 3v1.5M3 21v-6m0 0l2.77-.693a9 9 0 016.208.682l.108.054a9 9 0 006.086.71l3.114-.732a48.524 48.524 0 01-.005-10.499l-3.11.732a9 9 0 01-6.085-.711l-.108-.054a9 9 0 00-6.208-.682L3 4.5M3 15V4.5" /></svg></div>
+                <h2 class="text-2xl font-bold text-white">Fórmula 1</h2>
+                <p class="text-slate-400 mt-1">Simulador de carreras 3D.</p>
+            </a>
+
+            <!-- Botón 5: Runa Coffee -->
             <a href="https://runacoffee.vercel.app" target="_blank" class="glass-card rounded-lg p-6 block text-center ad-link">
                 <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 21v-7.5A.75.75 0 0114.25 12h.01a.75.75 0 01.75.75v7.5m-4.5 0v-7.5A.75.75 0 009.75 12h.01a.75.75 0 00-.75.75v7.5m-4.5 0v-7.5A.75.75 0 015.25 12h.01a.75.75 0 01.75.75v7.5m-4.5 0V9A.75.75 0 012.25 8.25h19.5A.75.75 0 0122.5 9v12m-18 0a.75.75 0 00.75.75h16.5a.75.75 0 00.75-.75m-18 0v-7.5A.75.75 0 015.25 12h13.5a.75.75 0 01.75.75v7.5" /></svg></div>
                 <h2 class="text-2xl font-bold text-white">Runa Coffee</h2>
                 <p class="text-slate-400 mt-1">Alianza estratégica con café de especialidad.</p>
             </a>
 
-            <!-- Botón 5: Yan'z Smart Wood -->
+            <!-- Botón 6: Yan'z Smart Wood -->
             <a href="https://yanz-smart-wood.vercel.app" target="_blank" class="glass-card rounded-lg p-6 block text-center ad-link">
                 <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15.362 5.214A8.252 8.252 0 0112 21 8.25 8.25 0 016.038 7.048 8.287 8.287 0 009 9.6a8.983 8.983 0 013.361-6.867 8.21 8.21 0 00-2.433 2.471z" /><path stroke-linecap="round" stroke-linejoin="round" d="M12 18a3.75 3.75 0 00.495-7.467 5.99 5.99 0 00-1.925 3.546 5.974 5.974 0 01-2.133-1.001A3.75 3.75 0 0012 18z" /></svg></div>
                 <h2 class="text-2xl font-bold text-white">Yan'z Smart Wood</h2>
                 <p class="text-slate-400 mt-1">Diseño y tecnología en madera.</p>
             </a>
 
-            <!-- Botón 6: Pruebas de IA "Aria" (En Construcción) -->
+            <!-- Botón 7: Pruebas de IA "Aria" (En Construcción) -->
             <a href="#" class="glass-card rounded-lg p-6 block text-center ad-link">
                  <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.898 20.624l-.219.219a1.5 1.5 0 01-2.121 0l-.219-.219a1.5 1.5 0 010-2.121l.219-.219a1.5 1.5 0 012.121 0l.219.219a1.5 1.5 0 010 2.121z" /></svg></div>
                 <h2 class="text-2xl font-bold text-white">IA "Aria"</h2>
                 <p class="text-slate-400 mt-1">Experimentos con IA generativa.</p>
             </a>
             
-            <!-- Botón 7 y 8 (En Construcción) -->
-            <a href="#" class="glass-card rounded-lg p-6 block text-center ad-link">
-                <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-slate-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 3.75v4.5m0-4.5h4.5m-4.5 0L9 9M3.75 20.25v-4.5m0 4.5h4.5m-4.5 0L9 15M20.25 3.75h-4.5m4.5 0v4.5m0-4.5L15 9m5.25 11.25h-4.5m4.5 0v-4.5m0 4.5L15 15" /></svg></div>
-                <h2 class="text-2xl font-bold text-slate-300">Proyecto Futuro</h2>
-                <p class="text-slate-500 mt-1">Espacio reservado.</p>
-            </a>
+            <!-- Botón 8 (En Construcción) -->
             <a href="#" class="glass-card rounded-lg p-6 block text-center ad-link">
                 <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-slate-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" /></svg></div>
                 <h2 class="text-2xl font-bold text-slate-300">Contacto</h2>
