--- a/index.html
+++ b/index.html
@@ -113,42 +113,49 @@
 
         <!-- Contenedor de Botones -->
         <main id="project-grid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-             <!-- Los botones de proyectos van aquí como antes -->
+            <!-- Botón 1: Caja de Herramientas -->
             <a href="caja_de_herramientas.html" class="glass-card rounded-lg p-6 block text-center ad-link">
                 <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M11.42 15.17L17.25 21A2.652 2.652 0 0021 17.25l-5.877-5.877M11.42 15.17l2.472-2.472a3.375 3.375 0 000-4.773L11.42 5.42a3.375 3.375 0 00-4.773 0L2.25 9.828a3.375 3.375 0 000 4.773l2.472 2.472M11.42 15.17L5.877 21" /></svg></div>
                 <h2 class="text-2xl font-bold text-white">Caja de Herramientas</h2>
                 <p class="text-slate-400 mt-1">Generadores, calculadoras y utilidades.</p>
             </a>
+
+            <!-- Botón 2: Lumenfall (Juego) -->
             <a href="lumenfall.html" class="glass-card rounded-lg p-6 block text-center ad-link">
                 <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6h9.75M10.5 6a1.5 1.5 0 11-3 0m3 0a1.5 1.5 0 10-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-9.75 0h9.75" /></svg></div>
                 <h2 class="text-2xl font-bold text-white">Lumenfall</h2>
                 <p class="text-slate-400 mt-1">Prototipo de juego de defensa.</p>
             </a>
-            <a href="generador_sprites.html" class="glass-card rounded-lg p-6 block text-center ad-link">
-                <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M8.25 3v1.5M4.5 8.25H3m18 0h-1.5M4.5 12H3m18 0h-1.5m-15 3.75H3m18 0h-1.5M8.25 19.5V21M12 3v1.5m0 15V21m3.75-18v1.5M19.5 8.25h-1.5m-15 3.75h1.5m15 0h1.5m-15 3.75h1.5m15 0h1.5M12 19.5v-1.5m3.75-15h-1.5m-15 3.75H6m15 0h-1.5m-15 3.75H6m15 0h-1.5m-15 3.75H6m15 0h-1.5" /></svg></div>
-                <h2 class="text-2xl font-bold text-white">Generador de Sprites</h2>
-                <p class="text-slate-400 mt-1">Herramienta para desarrolladores.</p>
-            </a>
+            
+            <!-- Botón 4: Fórmula 1 -->
             <a href="formula-1.html" class="glass-card rounded-lg p-6 block text-center ad-link">
                 <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M3 3v1.5M3 21v-6m0 0l2.77-.693a9 9 0 016.208.682l.108.054a9 9 0 006.086.71l3.114-.732a48.524 48.524 0 01-.005-10.499l-3.11.732a9 9 0 01-6.085-.711l-.108-.054a9 9 0 00-6.208-.682L3 4.5M3 15V4.5" /></svg></div>
                 <h2 class="text-2xl font-bold text-white">Fórmula 1</h2>
                 <p class="text-slate-400 mt-1">Simulador de carreras 3D.</p>
             </a>
+
+            <!-- Botón 5: Runa Coffee -->
             <a href="https://runacoffee.vercel.app" target="_blank" class="glass-card rounded-lg p-6 block text-center ad-link">
                 <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 21v-7.5A.75.75 0 0114.25 12h.01a.75.75 0 01.75.75v7.5m-4.5 0v-7.5A.75.75 0 009.75 12h.01a.75.75 0 00-.75.75v7.5m-4.5 0v-7.5A.75.75 0 015.25 12h.01a.75.75 0 01.75.75v7.5m-4.5 0V9A.75.75 0 012.25 8.25h19.5A.75.75 0 0122.5 9v12m-18 0a.75.75 0 00.75.75h16.5a.75.75 0 00.75-.75m-18 0v-7.5A.75.75 0 015.25 12h13.5a.75.75 0 01.75.75v7.5" /></svg></div>
                 <h2 class="text-2xl font-bold text-white">Runa Coffee</h2>
                 <p class="text-slate-400 mt-1">Alianza estratégica con café de especialidad.</p>
             </a>
+
+            <!-- Botón 6: Yan'z Smart Wood -->
             <a href="https://yanz-smart-wood.vercel.app" target="_blank" class="glass-card rounded-lg p-6 block text-center ad-link">
                 <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15.362 5.214A8.252 8.252 0 0112 21 8.25 8.25 0 016.038 7.048 8.287 8.287 0 009 9.6a8.983 8.983 0 013.361-6.867 8.21 8.21 0 00-2.433 2.471z" /><path stroke-linecap="round" stroke-linejoin="round" d="M12 18a3.75 3.75 0 00.495-7.467 5.99 5.99 0 00-1.925 3.546 5.974 5.974 0 01-2.133-1.001A3.75 3.75 0 0012 18z" /></svg></div>
                 <h2 class="text-2xl font-bold text-white">Yan'z Smart Wood</h2>
                 <p class="text-slate-400 mt-1">Diseño y tecnología en madera.</p>
             </a>
+
+            <!-- Botón 7: Pruebas de IA "Aria" (En Construcción) -->
             <a href="#" class="glass-card rounded-lg p-6 block text-center ad-link">
                  <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-green-400 icon-glow" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M9.813 15.904L9 18.75l-.813-2.846a4.5 4.5 0 00-3.09-3.09L2.25 12l2.846-.813a4.5 4.5 0 003.09-3.09L9 5.25l.813 2.846a4.5 4.5 0 003.09 3.09L15.75 12l-2.846.813a4.5 4.5 0 00-3.09 3.09zM18.259 8.715L18 9.75l-.259-1.035a3.375 3.375 0 00-2.455-2.456L14.25 6l1.036-.259a3.375 3.375 0 002.455-2.456L18 2.25l.259 1.035a3.375 3.375 0 002.456 2.456L21.75 6l-1.035.259a3.375 3.375 0 00-2.456 2.456zM16.898 20.624l-.219.219a1.5 1.5 0 01-2.121 0l-.219-.219a1.5 1.5 0 010-2.121l.219-.219a1.5 1.5 0 012.121 0l.219.219a1.5 1.5 0 010 2.121z" /></svg></div>
                 <h2 class="text-2xl font-bold text-white">IA "Aria"</h2>
                 <p class="text-slate-400 mt-1">Experimentos con IA generativa.</p>
             </a>
+            
+            <!-- Botón 8 (En Construcción) -->
             <a href="#" class="glass-card rounded-lg p-6 block text-center ad-link">
                 <div class="flex justify-center mb-4"><svg class="w-16 h-16 text-slate-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" /></svg></div>
                 <h2 class="text-2xl font-bold text-slate-300">Contacto</h2>
