--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </div>
         </a>
 
-        <!-- Panel 4: Runa Coffee (MODIFICADO) -->
+        <!-- Panel 4: Runa Coffee -->
         <a href="https://runacoffee.vercel.app" target="_blank" class="project-card-3d">
             <div class="glass-card rounded-lg w-full h-full">
                 <video class="card-video-bg" autoplay loop muted playsinline><source src="https://videos.pexels.com/video-files/2789328/2789328-hd_1280_720_25fps.mp4" type="video/mp4"></video>
@@ -214,7 +214,7 @@
             </div>
         </a>
 
-        <!-- Panel 6: Yanz Smart Wood (NUEVO) -->
+        <!-- Panel 6: Yanz Smart Wood -->
         <a href="https://yanz-smart-wood.vercel.app" target="_blank" class="project-card-3d">
             <div class="glass-card rounded-lg w-full h-full">
                 <video class="card-video-bg" autoplay loop muted playsinline><source src="https://videos.pexels.com/video-files/3254006/3254006-hd_1280_720_25fps.mp4" type="video/mp4"></video>
@@ -229,7 +229,7 @@
             </div>
         </a>
 
-        <!-- Panel 7: Laboratorio de Ideas (NUEVO) -->
+        <!-- Panel 7: Laboratorio de Ideas -->
         <a href="#" class="project-card-3d">
             <div class="glass-card rounded-lg w-full h-full">
                 <video class="card-video-bg" autoplay loop muted playsinline><source src="https://videos.pexels.com/video-files/3253410/3253410-hd_1280_720_25fps.mp4" type="video/mp4"></video>
@@ -237,6 +237,21 @@
                      <div class="flex justify-center mb-4"><svg class="w-12 h-12 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M10.5 6a7.5 7.5 0 100 12h-3a7.5 7.5 0 000-12h3z" /><path stroke-linecap="round" stroke-linejoin="round" d="M10.5 9a2.25 2.25 0 100 4.5 2.25 2.25 0 000-4.5zM19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z" /></svg></div>
                     <h2 class="text-xl font-bold text-white">Laboratorio de Ideas</h2>
                     <p class="text-slate-300 mt-1 text-sm">Nuevos prototipos en desarrollo.</p>
+                </div>
+                <div class="monitor-bezel">
+                    <div class="loading-bar-container"><div class="loading-bar-fill"></div></div>
+                </div>
+            </div>
+        </a>
+
+        <!-- Panel 8: Tinkuy (NUEVO) -->
+        <a href="https://github.com/Yanzsmartwood2025/JUSN38/tree/main/tinkuy" target="_blank" class="project-card-3d">
+            <div class="glass-card rounded-lg w-full h-full">
+                <video class="card-video-bg" autoplay loop muted playsinline><source src="https://videos.pexels.com/video-files/853909/853909-hd_1280_720_25fps.mp4" type="video/mp4"></video>
+                <div class="card-content p-6 text-center">
+                     <div class="flex justify-center mb-4"><svg class="w-12 h-12 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244" /></svg></div>
+                    <h2 class="text-xl font-bold text-white">Tinkuy</h2>
+                    <p class="text-slate-300 mt-1 text-sm">Plataforma de conexión social.</p>
                 </div>
                 <div class="monitor-bezel">
                     <div class="loading-bar-container"><div class="loading-bar-fill"></div></div>
