--- a/index.html
+++ b/index.html
@@ -244,14 +244,14 @@
             </div>
         </a>
 
-        <!-- Panel 8: Tinkuy (NUEVO) -->
-        <a href="https://github.com/Yanzsmartwood2025/JUSN38/tree/main/tinkuy" target="_blank" class="project-card-3d">
+        <!-- Panel 8: Tinkuy (ENLACE CORREGIDO) -->
+        <a href="https://tinkuy.vercel.app/" target="_blank" class="project-card-3d">
             <div class="glass-card rounded-lg w-full h-full">
                 <video class="card-video-bg" autoplay loop muted playsinline><source src="https://videos.pexels.com/video-files/853909/853909-hd_1280_720_25fps.mp4" type="video/mp4"></video>
                 <div class="card-content p-6 text-center">
                      <div class="flex justify-center mb-4"><svg class="w-12 h-12 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244" /></svg></div>
                     <h2 class="text-xl font-bold text-white">Tinkuy</h2>
-                    <p class="text-slate-300 mt-1 text-sm">Plataforma de conexión social.</p>
+                    <p class="text-slate-300 mt-1 text-sm">Juego interactivo de conexión.</p>
                 </div>
                 <div class="monitor-bezel">
                     <div class="loading-bar-container"><div class="loading-bar-fill"></div></div>
