--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
             </div>
         </a>
 
-        <!-- Panel 8: Tinkuy (ENLACE CORREGIDO) -->
-        <a href="https://tinkuy.vercel.app/" target="_blank" class="project-card-3d">
+        <!-- Panel 8: Tinkuy (RUTA CORREGIDA) -->
+        <a href="tinkuy/" class="project-card-3d">
             <div class="glass-card rounded-lg w-full h-full">
                 <video class="card-video-bg" autoplay loop muted playsinline><source src="https://videos.pexels.com/video-files/853909/853909-hd_1280_720_25fps.mp4" type="video/mp4"></video>
                 <div class="card-content p-6 text-center">
