--- a/futbol-3d-pro/index.html
+++ b/futbol-3d-pro/index.html
@@ -2,26 +2,17 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Fútbol Pro 3D</title>
-    
-    <!-- Enlazamos nuestra hoja de estilos -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Prueba 3D</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- El canvas del juego es ahora el único elemento principal en el body -->
     <canvas id="game-canvas"></canvas>
 
-    <!-- === CARGA DE SCRIPTS === -->
-
-    <!-- 1. Cargamos el CEREBRO SECRETO -->
-    <script src="../firebase-init.js"></script>
-
-    <!-- 2. Cargamos las herramientas externas (Motor 3D y Física) -->
+    <!-- Solo cargamos la librería 3D -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
-
-    <!-- 3. Cargamos la lógica principal de nuestro juego -->
+    
+    <!-- Y nuestro script de prueba -->
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
