--- a/lumenfall.html
+++ b/lumenfall.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -78,7 +77,6 @@
             border: 2px solid #555;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             position: relative;
-            /* Se ha modificado object-fit y object-position para ajustar mejor la imagen */
             object-fit: contain;
             object-position: 50% 50%;
         }
@@ -372,8 +370,8 @@
         <div id="ui-top">
             <div class="player-info">
                 <div id="player-profile-container">
-                    <!-- URL de la imagen del personaje ajustada -->
-                    <img id="player-profile-image" src="https://raw.githubusercontent.com/Yanzsmartwood2025/JUSN38/3c64c782756d1084224050e046a6f1ac3c9f28d5/assets/images/Picsart_25-07-10_02-19-17-217.jpg" alt="Joziel Profile">
+                    <!-- URL de la imagen de la barra de energía ajustada para mostrarse en el círculo -->
+                    <img id="player-profile-image" src="https://raw.githubusercontent.com/Yanzsmartwood2025/JUSN38/701301ad76b7ae323e026cd8577529b52229e75f/assets/images/barra-de-energia.png" alt="Energy Bar Profile">
                     <div id="joziel-halo"></div>
                 </div>
                 <div class="stats-group">
