--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" /> <!-- Ancho estándar para OG images -->
     <meta property="og:image:height" content="630" /> <!-- Alto estándar para OG images -->
+    
+    <!-- Fallback para sistemas más antiguos o que no leen bien og:image -->
+    <link rel="image_src" href="https://raw.githubusercontent.com/Yanzsmartwood2025/JUSN38/main/assets/images/JUSN38/social-preview.png" />
+
 
     <!-- Metatags para Web App y Tema -->
     <meta name="theme-color" content="#0c0a18">
@@ -262,7 +266,7 @@
             <div class="glass-card rounded-lg w-full h-full">
                 <video class="card-video-bg" autoplay loop muted playsinline><source src="https://videos.pexels.com/video-files/2789328/2789328-hd_1280_720_25fps.mp4" type="video/mp4"></video>
                 <div class="card-content p-6 text-center">
-                    <div class="flex justify-center mb-4"><svg class="w-12 h-12 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path d="M10.575 2.25h2.85c.414 0 .75.336.75.75v.31c0 .414-.336.75-.75.75h-2.85a.75.75 0 01-.75-.75v-.31c0-.414.336-.75.75-.75zM9 9.75A.75.75 0 009.75 9h4.5a.75.75 0 000-1.5h-4.5A.75.75 0 009 9.75zM9 12.75A.75.75 0 009.75 12h4.5a.75.75 0 000-1.5h-4.5a.75.75 0 00-.75.75zM9.057 15.443l-.004.005a.75.75 0 00.004-.005zM8.25 15h7.5a.75.75 0 00.75-.75v-6a.75.75 0 00-.75-.75h-7.5a.75.75 0 00-.75.75v6c0 .414.336.75.75.75zM12 21a8.25 8.25 0 008.25-8.25v-6A8.25 8.25 0 0012 3H3.75A1.5 1.5 0 002.25 4.5v12A1.5 1.5 0 003.75 18H12c0 1.657 1.343 3 3 3z" /></svg></div>
+                    <div class="flex justify-center mb-4"><svg class="w-12 h-12 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path d="M10.575 2.25h2.85c.414 0 .75.336.75.75v.31c0 .414-.336.75-.75.75h-2.85a.75.75 0 01-.75-.75v-.31c0-.414.336.75.75-.75zM9 9.75A.75.75 0 009.75 9h4.5a.75.75 0 000-1.5h-4.5A.75.75 0 009 9.75zM9 12.75A.75.75 0 009.75 12h4.5a.75.75 0 000-1.5h-4.5a.75.75 0 00-.75.75zM9.057 15.443l-.004.005a.75.75 0 00.004-.005zM8.25 15h7.5a.75.75 0 00.75-.75v-6a.75.75 0 00-.75-.75h-7.5a.75.75 0 00-.75.75v6c0 .414.336.75.75.75zM12 21a8.25 8.25 0 008.25-8.25v-6A8.25 8.25 0 0012 3H3.75A1.5 1.5 0 002.25 4.5v12A1.5 1.5 0 003.75 18H12c0 1.657 1.343 3 3 3z" /></svg></div>
                     <h2 class="text-xl font-bold text-white">Runa Coffee</h2>
                     <p class="text-slate-300 mt-1 text-sm">Café de especialidad.</p>
                 </div>
